redo how button styles are applied

--- a/scss/common.scss
+++ b/scss/common.scss
@@ -7,6 +7,7 @@
 //
 // - Base
 //   - Base override
+// - Button
 // - Chip
 // - Code
 // - Cooked
@@ -29,6 +30,7 @@
 
 @import 'common/base';
 @import 'common/base-override';
+@import 'common/button';
 @import 'common/chip';
 @import 'common/code';
 @import 'common/cooked';
