--- a/scss/common/_button.scss
+++ b/scss/common/_button.scss
@@ -1,6 +1,7 @@
 // Flat button
 
-@mixin btn-flat {
+.btn,
+%btn-flat {
   background-color: transparent;
   background-image: none;
   border: 0;
@@ -28,6 +29,7 @@
 
   &:active {
     background-color: color-chooser($btn-bg-active-dark, $btn-bg-active-light);
+    background-image: none;
   }
 
   &:focus {
@@ -36,16 +38,8 @@
 
   &[disabled],
   &.disabled {
-    color: color-chooser($btn-color-disabled-dark, $btn-color-disabled-light);
-
-    @include focus-hover {
-      background-color: transparent;
-      color: color-chooser($btn-color-disabled-dark, $btn-color-disabled-light);
-    }
-
-    &:active {
-      background-color: transparent;
-    }
+    background-color: transparent !important;
+    color: color-chooser($btn-color-disabled-dark, $btn-color-disabled-light) !important;
   }
 
   &.btn-danger {
@@ -69,9 +63,7 @@
 
 // Raised button
 
-@mixin btn-raised {
-  @include btn-flat;
-
+%btn-raised {
   background-color: color-chooser($btn-bg-dark, $btn-bg-light);
   box-shadow: $btn-box-shadow;
 
@@ -93,16 +85,8 @@
 
   &[disabled],
   &.disabled {
-    background-color: color-chooser($btn-bg-disabled-dark, $btn-bg-disabled-light);
-    box-shadow: none;
-
-    @include focus-hover {
-      background-color: color-chooser($btn-bg-disabled-dark, $btn-bg-disabled-light);
-    }
-
-    &:active {
-      background-color: color-chooser($btn-bg-disabled-dark, $btn-bg-disabled-light);
-    }
+    background-color: color-chooser($btn-bg-disabled-dark, $btn-bg-disabled-light) !important;
+    box-shadow: none !important;
 
     &::before {
       display: none;
@@ -146,7 +130,17 @@
 
 // Small button
 
-@mixin btn-sm {
+%btn-footer {
+  margin-left: $card-inner-spacer-x;
+  padding-right: ($card-inner-spacer-x);
+  padding-left: ($card-inner-spacer-x);
+
+  &:first-child {
+    margin-left: 0;
+  }
+}
+
+%btn-sm {
   font-size: $btn-font-size-sm;
   padding: $btn-padding-y-sm $btn-padding-x-sm;
 }
