--- a/scss/common/_cooked-aside.scss
+++ b/scss/common/_cooked-aside.scss
@@ -139,17 +139,13 @@ div {
       border-top-color: color-chooser($table-border-color-dark, $table-border-color-light);
       padding: ($card-padding-y / 2) ($card-padding-x - $card-inner-spacer-x);
 
+      a {
+        @extend %btn-flat;
+      }
+
       a,
       .btn {
-        @include btn-flat;
-
-        margin-left: $card-inner-spacer-x;
-        padding-right: $card-inner-spacer-x;
-        padding-left: $card-inner-spacer-x;
-
-        &:first-child {
-          margin-left: 0;
-        }
+        @extend %btn-footer;
       }
 
       .fa {
