--- a/common/common.scss
+++ b/common/common.scss
@@ -2948,6 +2948,18 @@ nav.post-controls .show-replies i {
   display: -ms-flexbox;
   display: flex;
 }
+#reply-control .add-warning {
+  margin-right: 16px;
+  margin-left: 0;
+  position: static;
+  width: auto;
+}
+#reply-control .add-warning input[type='checkbox'] {
+  margin-right: 4px;
+}
+#reply-control .add-warning label {
+  margin-bottom: 0;
+}
 #reply-control .category-input {
   padding-right: 16px;
   padding-left: 16px;
@@ -3167,6 +3179,9 @@ nav.post-controls .show-replies i {
   margin: 0;
   max-width: none;
 }
+#reply-control .reply-area .ac-wrap {
+  margin-right: 16px;
+}
 #reply-control .reply-to {
   -webkit-box-align: center;
   -webkit-align-items: center;
@@ -3196,6 +3211,10 @@ nav.post-controls .show-replies i {
   -webkit-flex-grow: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+  -webkit-box-ordinal-group: 0;
+  -webkit-order: -1;
+      -ms-flex-order: -1;
+          order: -1;
 }
 #reply-control .toggler {
   -webkit-box-align: center;
