adjust vertical alignment of bootstrap mode alert box

--- a/common/common.scss
+++ b/common/common.scss
@@ -2327,6 +2327,10 @@ div.menu-links-header .menu-links-row {
   outline: 0;
 }
 
+.alert-bootstrap-mode {
+  margin-bottom: 24px;
+}
+
 nav.post-controls {
   -webkit-box-align: center;
   -webkit-align-items: center;
