--- a/scss/common/_topic-list.scss
+++ b/scss/common/_topic-list.scss
@@ -221,10 +221,23 @@
   }
 
   .topic-status {
-    display: none;
+    font-size: inherit;
+    margin: 0 ($tbody-cell-padding-x / 2) 0 0;
+    padding: 0;
+
+    &:last-of-type {
+      margin-right: ($tbody-cell-padding-x / 2);
+    }
   }
 }
 
 .topic-list-bottom {
   margin: 0 0 $spacer;
+}
+
+.topic-statuses {
+  .topic-status {
+    margin: 0 ($tbody-cell-padding-x / 2) 0 0;
+    padding: 0; 
+  }
 }
