--- a/scss/common/_post.scss
+++ b/scss/common/_post.scss
@@ -137,7 +137,14 @@ nav {
 
 .names {
   .fa {
-    margin-left: 0;
+    color: inherit;
+    margin-left: $spacer-xs;
+
+    &::before {
+      font-size: inherit;
+      line-height: 1;
+      vertical-align: middle;
+    }
   }
 }
 
