--- a/scss/common/_topic-list.scss
+++ b/scss/common/_topic-list.scss
@@ -237,7 +237,7 @@
 
 .topic-statuses {
   .topic-status {
-    margin: 0 ($tbody-cell-padding-x / 2) 0 0;
+    margin: 0;
     padding: 0; 
   }
 }
